...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/User_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/person_icon_24"
            android:drawableTint="@color/darkGray"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            tools:targetApi="m" />

        <EditText
            android:id="@+id/User_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/lock_icon_24"
            android:drawableTint="@color/darkGray"
            android:ems="10"
            android:fontFamily="sans-serif"
...
            android:inputType="textPassword"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            tools:targetApi="m" />

        <Button
            android:id="@+id/SignInButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:onClick="signIn"
            android:text="@string/singn_in_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/darkGray"
            android:onClick="register"
            android:text="@string/register"
...
