...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="clickEditAccount"
                    android:text="@string/edit_account" />

                <Button
                    android:id="@+id/detail_signout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_blue_bright"
                    android:elevation="4dp"
                    android:onClick="clickSignOut"
                    android:text="@string/sign_out_button"
...
